# pangu-studio-rs

./: .gitignore  Cargo.toml  README.md
pangu-application/: Cargo.toml
pangu-application/src/: lib.rs
pangu-application/src/container/: container.rs  mod.rs
pangu-application/src/sslcert/: dns_provider.rs  mod.rs  sslcert.rs
pangu-domain/: Cargo.toml
pangu-domain/src/: lib.rs
pangu-domain/src/errors/: mod.rs
pangu-domain/src/model/: container.rs  container_credential.rs  dns_provider.rs  endpoint.rs  mod.rs  user.rs
pangu-domain/src/repository/: endpoint.rs  mod.rs  sslcert.rs
pangu-domain/src/service/: container_service.rs  mod.rs  sslcert.rs
pangu-infras/: Cargo.toml
pangu-infras/db/migrations/: 20230607133200_add_endpoints_table.sql  20230607133200_init.sql  20230609133200_add_sslcert_status.sql  20230610152100_add_sslcert_expired.sql  20230610154500_add_sslcert_mail.sql  20230610210000_add_sslcert_addition.sql  20230614173500_alter_dns_provider_secret.sql
pangu-infras/db/test/: data.sql
pangu-infras/src/: lib.rs
pangu-infras/src/docker/: docker_service.rs  mod.rs
pangu-infras/src/init/: mod.rs
pangu-infras/src/repository/: endpoint.rs  mod.rs  pool.rs  sslcert.rs
pangu-infras/src/repository/sslcert/: dns_provider.rs  mod.rs  sslcert.rs
pangu-infras/src/service/: mod.rs  sslcert.rs  sslcert_dnspod.rs
pangu-infras/src/service/docker/: docker.rs  mod.rs
pangu-infras/src/tests/: mod.rs
pangu-infras/src/tests/repository/: endpoint.rs  mod.rs  sslcert.rs
pangu-infras/src/tests/service/: mod.rs
pangu-infras/src/tests/service/docker/: container.rs
pangu-proxy/: Cargo.toml
pangu-proxy/configs/: config.yaml.example
pangu-proxy/src/: conf.rs  main.rs
pangu-proxy/src/reverse_proxy/: mod.rs
pangu-studio/: components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
pangu-studio/src/: App.vue  components.d.ts  main.ts
pangu-studio/src-tauri/: Cargo.toml  tauri.conf.json
pangu-studio/src-tauri/src/: main.rs
pangu-studio/src-tauri/src/command/: mod.rs  sslcert.rs
pangu-studio/src/api/: sslcert.ts
pangu-studio/src/pages/appstore/: index.vue
pangu-studio/src/pages/container/: index.vue
pangu-studio/src/pages/database/: index.vue
pangu-studio/src/pages/filemanager/: index.vue
pangu-studio/src/pages/sslcert/: ApplyCert.vue  Certificate.vue  DnsProvider.vue  Trash.vue  index.vue
pangu-studio/src/router/: index.ts
pangu-studio/src/stores/: sslcert.ts
pangu-studio/src/utils/: date.ts
