[package]
name = "pangu-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pangu-domain = { path = "../pangu-domain" }
bollard = {git = "https://github.com/pangu-studio/bollard.git",branch = "master"}
async-trait = "*"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_with="*"
thiserror = "^1.0.31"
sqlx = { version = "0.7.0-alpha.3" }
chrono = {version = "0.4", features = ["serde"]}
simplelog = { version = "^0.12.0", features = ["paris"] }
log = "*"
derive_more="*"