[package]
name = "pangu-domain"
version = "0.1.0"
edition = "2021"

[lib]
name = "pangu_domain"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = {git = "https://github.com/pangu-studio/bollard.git",branch = "master"}
async-trait = "*"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_with="*"