[package]
name = "pangu-domain"
version = "0.1.0"
edition = "2021"

[lib]
name = "pangu_domain"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_with="*"
thiserror = "^1.0.31"
sqlx = { version = "0.7.0-alpha.3" }
chrono = {version = "0.4", features = ["serde"]}
simplelog = { version = "^0.12.0", features = ["paris"] }
log = "*"
derive_more = "*"