[package]
name = "pangu-infras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pangu-domain = { path = "../pangu-domain" }
bollard = "*"
sqlx = { version = "0.7.0-alpha.3", features = [ "sqlite", "chrono","runtime-tokio" ] }
async-trait = "*"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.20.0", features = ["rt-multi-thread", "parking_lot","macros"]}
once_cell = "1.17.1"
chrono = {version = "0.4", features = ["serde"]}
simplelog = { version = "^0.12.0", features = ["paris"] }
thiserror = "^1.0.31"
log = "*"
uuid ={ version = "*",features = ["v4"]}
[dev-dependencies]
test-context = "0.1.3"