[package]
name = "pangu-infras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "*", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
pangu-domain = { path = "../pangu-domain" }
pangu-application = { path = "../pangu-application" }
pangu-bollard = "0.14.0"
sqlx = { version = "0.7.0-alpha.3", features = [
    "sqlite",
    "chrono",
    "runtime-tokio",
] }
async-trait = "*"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json="*"
futures = { version = "0.3" }
futures-util = "0.3"
tokio = { version = "1.20.0", features = [
    "rt-multi-thread",
    "parking_lot",
    "macros",
] }
once_cell = "1.17.1"
chrono = { version = "0.4", features = ["serde"] }
simplelog = { version = "^0.12.0", features = ["paris"] }
thiserror = "^1.0.31"
log = "*"
uuid = { version = "*", features = ["v4"] }
instant-acme = "0.3.2"
clap = { version = "4.0.29", features = ["derive"] }
rcgen = "0.10.0"

[dev-dependencies]
test-context = "0.1.3"
anyhow = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

