[package]
name = "pangu-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperlocal = "0.8"
hyper = "*"
tokio = { version = "1.20.0", features = ["io-std","io-util","rt", "parking_lot","macros"]}
tracing = "0.1.34"
lazy_static = "1.4.0"
hyper-trust-dns = { version = "0.4.2", features = [
  "rustls-http2",
  "dnssec-ring",
  "dns-over-https-rustls",
  "rustls-webpki"
] }