[package]
name = "pangu-studio"
version = "0.1.0"
description = "Pangu Studio"
authors = ["iotaylor"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }
[dependencies]
pangu-infras = { path = "../../pangu-infras" }
pangu-domain = { path = "../../pangu-domain" }
pangu-application = { path = "../../pangu-application" }
tauri = { version = "1.3", features = ["shell-open", "window-set-title"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
sqlx = { version = "0.7.0-alpha.3", features = [
    "sqlite",
    "chrono",
    "runtime-tokio",
] }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
